// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTableCell should be rendered correctly 1`] = `
<div
  className="cell cell size-36 padding-12 align-widgets-top"
  role="cell"
  style={
    Object {
      "alignSelf": undefined,
      "flexBasis": "200px",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "minWidth": "200px",
      "textAlign": undefined,
    }
  }
>
  <div
    className="contentWrapper"
    style={
      Object {
        "justifyContent": undefined,
      }
    }
  >
    <div>
      test
    </div>
  </div>
</div>
`;

exports[`DataTableCell should be rendered correctly with extra props 1`] = `
<div
  className="cell cell size-48 padding-24 padding-right-24 align-widgets-top"
  role="cell"
  style={
    Object {
      "alignSelf": undefined,
      "flexBasis": "200px",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "minWidth": "200px",
      "textAlign": undefined,
    }
  }
>
  <div
    className="contentWrapper"
    style={
      Object {
        "justifyContent": undefined,
      }
    }
  >
    <div>
      test
    </div>
  </div>
</div>
`;
